[package]
name = "ota-plus-client"
version = "0.1.0"
authors = ["Txus <txus@advancedtelematic.com>"]

[lib]
name = "libotaplus"
path = "src/lib.rs"

[[bin]]
name = "ota_plus_client"
path = "src/main.rs"
doc = false

[dependencies]
chan = "0.1.18"
chan-signal = "0.1.6"
crossbeam = "0.2.9"
dbus = "0.3.3"
env_logger = "0.3.3"
getopts = "0.2.14"
hyper = { git = "https://github.com/hyperium/hyper" }
log = "0.3.6"
nom = "1.2.3"
rustc-serialize = "0.3.19"
tempfile = "2.1.3"
time = "0.1.35"
toml = "0.1.30"
url = "1.1.1"
ws = "0.5.0"
