[package]
name = "sota_client"
version = "0.1.0"
authors = ["Jerry Trieu <jerry@advancedtelematic.com",
           "Shaun Taheri <shaun@advancedtelematic.com>",
           "Stevan Andjelkovic <steven@advancedtelematic.com"]

[lib]
name = "sota"
path = "src/lib.rs"

[[bin]]
name = "sota_client"
path = "src/main.rs"
doc = false

[dependencies]
chan = "0.1.18"
chan-signal = "0.1.6"
crossbeam = "0.2.9"
dbus = "0.3.3"
env_logger = "0.3.3"
getopts = "0.2.14"
hyper = { git = "https://github.com/hyperium/hyper" }
lazy_static = "0.2.1"
log = "0.3.6"
nom = "1.2.3"
openssl = "0.7.13"
rand = "0.3.14"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.19"
time = "0.1.35"
toml = "0.1.30"
url = "1.1.1"
ws = "0.5.0"
