[package]
name = "sota_client"
version = "0.1.0"
authors = ["Jerry Trieu <jerry@advancedtelematic.com",
           "Shaun Taheri <shaun@advancedtelematic.com>",
           "Stevan Andjelkovic <steven@advancedtelematic.com"]

[lib]
name = "sota"
path = "src/lib.rs"

[[bin]]
name = "sota_client"
path = "src/main.rs"
doc = false

[dependencies]
chan = "0.1.18"
chan-signal = "0.1.7"
crossbeam = "0.2.10"
dbus = "0.4.1"
env_logger = "0.3.5"
getopts = "0.2.14"
hyper = { git = "https://github.com/hyperium/hyper", rev = "006f66f34a9c3c2a655118aab2186198deeb143b" }
lazy_static = "0.2.1"
log = "0.3.6"
nom = "1.2.4"
openssl = "0.8.3"
rand = "0.3.14"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.19"
time = "0.1.35"
toml = "0.2.1"
unix_socket = "0.5.0"
url = "1.2.1"
ws = "0.5.3"
