[package]
name = "sota_client"
version = "0.2.0"
authors = ["Jerry Trieu <jerry@advancedtelematic.com>",
           "Philipp Millar <philipp@advancedtelematic.com>"]

[[bin]]
doc = false
name = "sota_client"
path = "src/main.rs"

[dependencies]
hyper = "*"
rustc-serialize = "*"
time = "*"
url = "*"
log = "*"
env_logger = "*"
rust-crypto = "*"
toml = "*"
dbus = "*"
getopts = "*"
tempfile = "*"

[dev-dependencies]
rand = "*"
